# ledslie-old

./: .gitignore  CMakeLists.txt  serial_test.py
docs/: deployment.pu  messages.rst
refresher/: platformio.ini
refresher/src/: main.cpp
server/: __main__.py  trial_try.py
server/clock/: __main__.py
server/common/: connections.py  main.py  proto.py  watchdog.py  zmq_proto.py
server/common/tests/: test_connections.py
server/correspondents/: clock.py
server/layout/: __main__.py
server/redactie/: __main__.py  inbel.py  redactie.py
server/redactie/test/: test_redactie.py
server/swichboard/: __main__.py  manager.py  proto.py  switchboard.py
server/swichboard/test/: test_proto.py  test_switchboard.py  test_test.py
server/t/: flcliapi.py  flclient3.py  flserver.py  zhelpers.py
src/: main.cpp
tester/: Makefile  test_gifreader.c  test_refresher.c  tester.c
wifiserial/: .gitignore  platformio.ini  secret.h.tmpl  wifiserial.ino
wifiserial/src/: main.cpp  pages.cpp  pages.h
